--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,15 +1,23 @@
 [server]
-# ファイルアップロードサイズ制限を無制限に設定（大きなファイル対応）
-maxUploadSize = 1000
+# ファイルアップロードサイズ制限を500MBに設定（クラウド環境対応）
+maxUploadSize = 500
 
-# CORS設定
+# CORS設定（本番環境用）
 enableCORS = false
 enableXsrfProtection = false
 
 # サーバー設定
 headless = true
 runOnSave = true
+port = 8501
 
 [browser]
-# ブラウザ自動起動を無効化
+# ブラウザ設定
 gatherUsageStats = false
+
+[theme]
+# テーマ設定（デプロイ用）
+primaryColor = "#FF6B6B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
