--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-# Streamlit Core
-streamlit==1.37.1
-
-# Computer Vision (Streamlit Cloud最適化)
-opencv-python-headless==4.7.1.72
-mediapipe==0.10.9
-
-# Data Processing
-numpy==1.24.3
-
-# 画像処理サポート
-Pillow==9.5.0
+streamlit
+opencv-python-headless
+mediapipe
+numpy
+Pillow
